--- a/Superscribe.Tests.WebApi/packages.config
+++ b/Superscribe.Tests.WebApi/packages.config
@@ -5,6 +5,6 @@
   <package id="Machine.Fakes.Moq" version="1.8.0" targetFramework="net45" />
   <package id="Machine.Specifications" version="0.5.16" targetFramework="net45" />
   <package id="Moq" version="4.1.1311.0615" targetFramework="net45" />
-  <package id="Newtonsoft.Json" version="5.0.5" targetFramework="net45" />
-  <package id="WebAPI.Testing" version="1.0.0.1" targetFramework="net45" />
+  <package id="Newtonsoft.Json" version="5.0.5" targetFramework="net45" requireReinstallation="True" />
+  <package id="WebAPI.Testing" version="1.0.0.1" targetFramework="net45" requireReinstallation="True" />
 </packages>
