--- a/Superscribe.Tests.WebApi/Superscribe.Tests.WebApi2.csproj
+++ b/Superscribe.Tests.WebApi/Superscribe.Tests.WebApi2.csproj
@@ -93,9 +93,9 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Superscribe.WebAPI\Superscribe.WebApi.csproj">
-      <Project>{4589FE86-FF6A-4A97-ACB9-5E4D5F813A04}</Project>
-      <Name>Superscribe.WebApi</Name>
+    <ProjectReference Include="..\Superscribe.WebAPI\Superscribe.WebAPI2.csproj">
+      <Project>{2295d548-7a8f-4ec0-8fab-2cac81763aad}</Project>
+      <Name>Superscribe.WebAPI2</Name>
     </ProjectReference>
     <ProjectReference Include="..\Superscribe\Superscribe.csproj">
       <Project>{0882d762-ca4d-48a5-956e-2121dece000e}</Project>
