--- a/Superscribe.WebAPI/Superscribe.WebApi2.nuspec
+++ b/Superscribe.WebAPI/Superscribe.WebApi2.nuspec
@@ -4,10 +4,10 @@
     <version>0.0</version>
     <authors>Roysvork</authors>
     <owners>Roysvork</owners>
-    <id>Superscribe.WebApi</id>
-    <title>Superscribe.WebApi</title>
+    <id>Superscribe.WebApi2</id>
+    <title>Superscribe.WebApi2</title>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
-    <description>Superscribe action\controller selectors and module handler for Asp.Net Web API</description>
+    <description>Superscribe action\controller selectors and module handler for Asp.Net Web API 2</description>
     <dependencies>
 	  <dependency id="Superscribe" version="0.3.0" />	
 	  <dependency id="Microsoft.AspNet.WebApi.Core" version="5.0.0" />  
