--- a/Superscribe.Tests.WebApi/Superscribe.Tests.WebApi.csproj
+++ b/Superscribe.Tests.WebApi/Superscribe.Tests.WebApi.csproj
@@ -68,7 +68,10 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Net.Http" />
-    <Reference Include="System.Web.Http, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL" />
+    <Reference Include="System.Web.Http, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\packages\Microsoft.AspNet.WebApi.Core.4.0.30506.0\lib\net40\System.Web.Http.dll</HintPath>
+    </Reference>
     <Reference Include="WebAPI.Testing">
       <HintPath>..\packages\WebAPI.Testing.1.0.0.1\lib\net45\WebAPI.Testing.dll</HintPath>
     </Reference>
