--- a/Superscribe.WebAPI/Superscribe.WebApi2.nuspec
+++ b/Superscribe.WebAPI/Superscribe.WebApi2.nuspec
@@ -10,7 +10,8 @@
     <description>Superscribe action\controller selectors and module handler for Asp.Net Web API 2</description>
     <dependencies>
 	  <dependency id="Superscribe" version="0.3.0" />	
-	  <dependency id="Microsoft.AspNet.WebApi.Core" version="5.0.0" />  
+	  <dependency id="Microsoft.AspNet.WebApi.Core" version="5.0.0" />
+      <dependency id="Microsoft.Net.Http" version="2.2.18" />
     </dependencies>
     <copyright>Pete Smith 2013</copyright>
   </metadata>
