--- a/Superscribe.Tests.OwinFrameworkHandoff/Superscribe.Tests.OwinFrameworkHandoff.csproj
+++ b/Superscribe.Tests.OwinFrameworkHandoff/Superscribe.Tests.OwinFrameworkHandoff.csproj
@@ -40,6 +40,12 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Machine.Specifications">
+      <HintPath>..\packages\Machine.Specifications.0.5.16\lib\net40\Machine.Specifications.dll</HintPath>
+    </Reference>
+    <Reference Include="Machine.Specifications.Clr4">
+      <HintPath>..\packages\Machine.Specifications.0.5.16\lib\net40\Machine.Specifications.Clr4.dll</HintPath>
+    </Reference>
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="Microsoft.Owin">
       <HintPath>..\packages\Microsoft.Owin.2.0.2\lib\net45\Microsoft.Owin.dll</HintPath>
@@ -110,8 +116,7 @@
     <Compile Include="HelloController.cs" />
     <Compile Include="HelloModule.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Startup.cs" />
-    <Compile Include="Tests.cs" />
+    <Compile Include="FrameworkTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Superscribe.Owin\Superscribe.Owin.csproj">
