--- a/Superscribe.Tests.Owin/Superscribe.Tests.Owin.csproj
+++ b/Superscribe.Tests.Owin/Superscribe.Tests.Owin.csproj
@@ -67,6 +67,9 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\packages\Moq.4.1.1311.0615\lib\net40\Moq.dll</HintPath>
     </Reference>
+    <Reference Include="Newtonsoft.Json">
+      <HintPath>..\packages\Newtonsoft.Json.5.0.6\lib\net45\Newtonsoft.Json.dll</HintPath>
+    </Reference>
     <Reference Include="Owin">
       <HintPath>..\packages\Owin.1.0\lib\net40\Owin.dll</HintPath>
     </Reference>
@@ -91,6 +94,8 @@
   <ItemGroup>
     <Compile Include="ModuleTests.cs" />
     <Compile Include="PipelineTests.cs" />
+    <Compile Include="Product.cs" />
+    <Compile Include="ProductsModule.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Tests.cs" />
   </ItemGroup>
