--- a/Superscribe.Tests.Unit/Superscribe.Tests.Unit.csproj
+++ b/Superscribe.Tests.Unit/Superscribe.Tests.Unit.csproj
@@ -60,6 +60,7 @@
     <Compile Include="NonConsumingStateTests.cs" />
     <Compile Include="ParameterTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="StringRouteParserTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Superscribe.Testing\Superscribe.Testing.csproj">
