--- a/Superscribe/Superscribe.csproj
+++ b/Superscribe/Superscribe.csproj
@@ -52,6 +52,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SuperscribeModule.cs" />
     <Compile Include="Utils\DynamicDictionary.cs" />
+    <Compile Include="Utils\StringRouteParser.cs" />
     <Compile Include="Utils\SuperList.cs" />
     <Compile Include="Extensions.cs" />
     <Compile Include="Define.cs" />
