--- a/Superscribe.ScriptCS/Superscribe.ScriptCS.nuspec
+++ b/Superscribe.ScriptCS/Superscribe.ScriptCS.nuspec
@@ -9,8 +9,8 @@
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <description>Superscribe routing script pack for ScriptCS</description>
     <dependencies>
-        <dependency id="Superscribe" version="0.4.0" />        
-        <dependency id="Superscribe.Owin" version="0.4.0" />
+        <dependency id="Superscribe" version="(0.3.1,0.4.0)" />        
+        <dependency id="Superscribe.Owin" version="(0.3.1,0.4.0)" />
         <dependency id="Owin" version="1.0.0" />
         <dependency id="ScriptCs.Contracts" version="0.8.0" />
         <dependency id="Newtonsoft.Json" version="0.6.1" />
